--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,45 @@
 
 
 @layer base {
+
+    body {
+        min-height: 100vh;
+    }
+
     :root {
-        --fs-900: 9.375rem;
-        --fs-800: 6.25rem;
-        --fs-700: 3.5rem;
-        --fs-600: 2rem;
-        --fs-500: 1.75rem;
-        --fs-400: 1.125rem;
-        --fs-300: 1rem;
+        --fs-900: 5rem;
+        --fs-800: 3.5rem;
+        --fs-700: 2.5rem;
+        --fs-600: 1rem;
+        --fs-500: 1rem;
+        --fs-400: 0.938rem;
+        --fs-300: 0.875rem;
         --fs-200: 0.875rem;
+    }
+
+    @media (min-width: 768px) {
+        :root {
+            --fs-900: 9.375rem;
+            --fs-800: 5rem;
+            --fs-700: 2.5rem;
+            --fs-600: 1.5rem;
+            --fs-500: 1.25rem;
+            --fs-400: 1rem;
+            --fs-300: 1rem;
+            --fs-200: 0.875rem;
+        }
+    }
+
+    @media (min-width: 1440px) {
+        :root {
+            --fs-900: 9.375rem;
+            --fs-800: 6.25rem;
+            --fs-700: 3.5rem;
+            --fs-600: 2rem;
+            --fs-500: 1.75rem;
+            --fs-400: 1.125rem;
+            --fs-300: 1rem;
+            --fs-200: 0.875rem;
+        }
     }
 }
